# ccanny

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  main.c  main.cc  makefile  opencv.py  run.sh
include/: basic_types.h  blur.h  check.h  image.h  image.hpp  log.h  operator.h  vector.hpp
scripts/: gen_image.py
src/: blur.c  blur.cc  image.c  image.cc  operator.cc
src/image/: basic.cc  io.cc
